--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -53,18 +53,14 @@
         <i class="fab fa-google-plus left "></i>Google+</button>
     </div>
   </div>
-  <div *ngIf="socialUser" class="card text-center socialCard">
-  <img *ngIf="socialUser.photoUrl" class="card-img-top img-responsive photo" src="{{ socialUser.photoUrl }}">
-  <div class="card-block">
-    <h4 class="card-title">{{ socialUser.name }}</h4>
-    <p class="card-text">{{ socialUser.email }}</p>
-    <p class="card-text">Σύνδεση με {{ socialUser.provider }}</p>
-    <!--        <p class="card-text">{{ socialUser.idToken }}</p>-->
-  </div>
-  <div class="card-block">
-    <button class="btn btn-danger" (click)="signOut()">Sign out</button>
-  </div>
-</div>
+<!--  <div *ngIf="socialUser" class="card text-center socialCard">-->
+<!--  <img *ngIf="socialUser.photoUrl" class="card-img-top img-responsive photo" src="{{ socialUser.photoUrl }}">-->
+<!--  <div class="card-block">-->
+<!--    <h4 class="card-title">{{ socialUser.name }}</h4>-->
+<!--    <p class="card-text">{{ socialUser.email }}</p>-->
+<!--    <p class="card-text">Σύνδεση με {{ socialUser.provider }}</p>-->
+<!--    &lt;!&ndash;        <p class="card-text">{{ socialUser.idToken }}</p>&ndash;&gt;-->
+<!--  </div>-->
+<!--</div>-->
 
 </div>
-<!--</div>-->
