--- a/src/app/purchaseform/purchaseform.component.css
+++ b/src/app/purchaseform/purchaseform.component.css
@@ -4,3 +4,7 @@
 .custom-light-blue { color: #033E8C; }
 .custom-very-light-blue { color: #05DBF2; }
 .custom-grey { color: #BFAE99; }
+
+::ng-deep.mat-form-field-ripple {
+  background-color: #007bff !important;
+}
