--- a/src/app/account/account.component.css
+++ b/src/app/account/account.component.css
@@ -5,13 +5,21 @@
 .custom-very-light-blue { color: #05DBF2; }
 .custom-grey { color: #BFAE99; }
 
-.card{
-  width: 30rem;
-  height: 40rem;
-  margin:auto;
-}
 .socialCard{
   width: 20rem;
   height: 30rem;
   margin:auto;
+}
+.card{
+  width: 70%;
+  height: 90%;
+  margin:auto;
+}
+
+.card-img-top{
+  width: 50%;
+  margin: auto;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
 }
