--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,7 +20,7 @@
         <a class="nav-link" routerLink="/user">user</a>
       </li>
       <li class="nav-item" *ngIf="tokenStorageService.getUserRole()==='ADMIN'">
-        <a class="nav-link" routerLink="/admin_panel">Διαχείριση</a>
+        <a class="nav-link" routerLink="/management">Διαχείριση</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/imageUpload">τεστ</a>
