--- a/src/app/purchase/purchase.component.html
+++ b/src/app/purchase/purchase.component.html
@@ -28,7 +28,7 @@
             </div>
           </div>
           <div class="col-sm-3 text-center m-auto">
-            <a class="btn btn-primary btn-sm m-2" [routerLink]="['/purchaseform']"
+            <a class="btn btn-primary btn-sm m-2 text-capitalize" [routerLink]="['/purchaseform']"
                [queryParams]="{'movieId' :movie.id, 'movieShowId': movieShow.id}"> Κράτηση
             </a>
           </div>
