--- a/src/app/movie-show/movie-show.component.html
+++ b/src/app/movie-show/movie-show.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid mx-auto pt-5 pb-5">
   <div class="container container-fluid d-flex justify-content-center">
     <div class="row justify-content-center col-12">
-      <div class="col-sm-4 text-sm-right m-auto pt-3">
+      <div class="col-sm-4 text-lg-right m-auto pt-3">
         <h5 class="custom-blue">Αναζήτηση προβολών ανά ημέρα</h5>
       </div>
       <div class="col-sm-8 text-sm-left m-auto">
