--- a/src/app/movie-show/movie-show.component.html
+++ b/src/app/movie-show/movie-show.component.html
@@ -9,6 +9,15 @@
       </div>
     </div>
   </div>
+<!---------------------------------CALENDAR-------------------------------------->
+  {{showDateForServer}}
+  <div class="container container-fluid d-flex justify-content-center">
+    <div class="row justify-content-center col-12">
+      <app-calendar></app-calendar>
+    </div>
+  </div>
+
+
   <div *ngIf="message" class="custom-blue text-sm-center p-4">{{message}}</div>
 <div *ngIf="movies">
   <div *ngFor="let movie of movies; index as i">
