--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -6,3 +6,10 @@ pre {
   background-color: #f5f5f5;
   padding: 15px;
 }
+
+.custom-dark-blue { color: #010626; }
+.custom-blue { color: #021F59; }
+.custom-light-blue { color: #033E8C; }
+.custom-very-light-blue { color: #05DBF2; }
+.custom-grey { color: #BFAE99; }
+
