--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,14 +13,20 @@
       <li class="nav-item" *ngIf="tokenStorageService.getToken()">
         <a class="nav-link" routerLink="/movieShows">Προβολές</a>
       </li>
-      <li class="nav-item" *ngIf="tokenStorageService.getUserRole()==='ADMIN'">
+      <li class="nav-item" *ngIf="tokenStorageService.getUserRole()==='ADMIN'||tokenStorageService.getUserRole()==='ADMIN_CS'">
         <a class="nav-link" routerLink="/admin">admin</a>
       </li>
       <li class="nav-item" *ngIf="tokenStorageService.getUserRole()==='USER'">
         <a class="nav-link" routerLink="/user">user</a>
       </li>
-      <li class="nav-item" *ngIf="tokenStorageService.getUserRole()==='ADMIN'">
-        <a class="nav-link" routerLink="/management">Διαχείριση</a>
+      <li class="nav-item" *ngIf="tokenStorageService.getUserRole()==='ADMIN'||tokenStorageService.getUserRole()==='ADMIN_CS'">
+        <a class="nav-link" routerLink="/management">Διαχείριση Αιθουσών</a>
+      </li>
+      <li class="nav-item" *ngIf="tokenStorageService.getUserRole()==='ADMIN_CS'">
+        <a class="nav-link" routerLink="/management">Διαχείριση χρηστών</a>
+      </li>
+      <li class="nav-item" *ngIf="tokenStorageService.getUserRole()==='ADMIN_CS'">
+        <a class="nav-link" routerLink="/management">Στατιστικά</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/imageUpload">τεστ</a>
