--- a/src/app/movie-show-edit/movie-show-edit.component.html
+++ b/src/app/movie-show-edit/movie-show-edit.component.html
@@ -9,8 +9,15 @@
         <div class="col-sm-4 text-sm-right custom-blue">
           <label for="roomName" class="pt-2 pb-2">Ονομασία</label></div>
         <div class="col-sm-8">
-          <input type="text" class="form-control" name="roomName" id="roomName"
-                 [(ngModel)]="movieShow.roomOfMovieShow.name" required>
+          <select matNativeControl [(ngModel)]="movieShow.roomOfMovieShow.id" name="roomName" id="roomName"
+                  class="form-control" required>
+            <option value="" selected></option>
+            <option *ngFor="let room of showRoom" [value]="room.id">
+              {{room.name}}
+            </option>
+          </select>
+          <!--          <input type="text" class="form-control" name="roomName" id="roomName"-->
+          <!--                 [(ngModel)]="movieShow.roomOfMovieShow.name" required>-->
         </div>
       </div>
       <div class="form-group row col-12 p-1 justify-content-around">
@@ -21,7 +28,7 @@
                  [(ngModel)]="movieShow.roomOfMovieShow.capacity" required>
         </div>
       </div>
-    <!-- ταινια-->
+      <!-- ταινια-->
       <div class="text-capitalize text-center custom-light-blue h6 pt-2">Ταινία</div>
       <div class="form-group row col-12 p-1 justify-content-around">
         <div class="col-sm-4 text-sm-right custom-blue">
@@ -52,24 +59,26 @@
           <label for="description" class="pt-2 pb-2">Περιγραφή</label></div>
         <div class="col-sm-8">
           <textarea type="text" class="form-control" name="description" id="description"
-                 [(ngModel)]="movie.description" rows="4" required></textarea>
+                    [(ngModel)]="movie.description" rows="4" required></textarea>
         </div>
       </div>
+      <!-- εικόνα -->
+      <div class="row col-12 p-3 justify-content-around">
+        <div class="col-sm-4 text-sm-right custom-blue">
+          <label for="image" class="pt-2 pb-2">Αφίσα</label></div>
+        <div class="col-sm-8">
+          <img class="img-responsive photo m-auto poster"  [src]="'data:image/jpeg;base64,'+movie.poster">
+          <input type="file" id="image" (change)="onFileChanged($event)" required>
 
-            <!-- εικόνα -->
-            <div class="row col-12 p-3 justify-content-around">
-              <div class="col-sm-4 text-sm-right custom-blue">
-                <label for="image" class="pt-2 pb-2">Αφίσα</label></div>
-              <div class="col-sm-8">
-                <input type="file" id="image" (change)="onFileChanged($event)" required></div>
-            </div>
-            <div class="form-group">
-              <button class="btn btn-info btn-block w-25 m-auto text-capitalize">Αποθήκευση αλλαγών</button>
-            </div>
-    </form>
-        <div class="alert alert-danger" *ngIf="updateFailed">
-          Η επεξεργασία των στοιχείων σας απέτυχε! <br>{{errorMessage}}
         </div>
-        <div class="alert alert-success" *ngIf="isSuccessful"> Η επεξεργασία των στοιχείων σας ήταν επιτυχής!</div>
+      </div>
+      <div class="form-group text-center m-3">
+        <button class="btn btn-primary btn-sm m-auto text-capitalize">Αποθήκευση αλλαγών</button>
+      </div>
+    </form>
+    <div class="alert alert-danger" *ngIf="updateFailed">
+      Η επεξεργασία των στοιχείων σας απέτυχε! <br>{{errorMessage}}
+    </div>
+    <div class="alert alert-success" *ngIf="isSuccessful"> Η επεξεργασία των στοιχείων σας ήταν επιτυχής!</div>
   </div>
 </div>
