management and tickets purchase form ok

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,7 +26,7 @@
         <a class="nav-link" routerLink="/management">Διαχείριση χρηστών</a>
       </li>
       <li class="nav-item" *ngIf="tokenStorageService.getUserRole()==='ADMIN_CS'">
-        <a class="nav-link" routerLink="/management">Στατιστικά</a>
+        <a class="nav-link" routerLink="/statistics">Στατιστικά</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/imageUpload">τεστ</a>
