--- a/src/app/boardadmin/board-admin.component.html
+++ b/src/app/boardadmin/board-admin.component.html
@@ -1,4 +1,10 @@
-<p>boardadmin works!</p>
-
-
-admin
+<div class="container-fluid mx-auto pt-5 pb-5">
+  <div class="container container-fluid d-flex justify-content-center">
+    <div class="row justify-content-center col-12">
+      <div class="col-sm-4 text-lg-right m-auto pt-3">
+        <h5 class="custom-blue">Αναζήτηση χρήστη</h5>
+      </div>
+διαχειριση ρολων υπολοιπων χρηστων
+    </div>
+  </div>
+</div>
