--- a/src/app/movie-show-edit/movie-show-edit.component.html
+++ b/src/app/movie-show-edit/movie-show-edit.component.html
@@ -9,15 +9,8 @@
         <div class="col-sm-4 text-sm-right custom-blue">
           <label for="roomName" class="pt-2 pb-2">Ονομασία</label></div>
         <div class="col-sm-8">
-          <select matNativeControl [(ngModel)]="movieShow.roomOfMovieShow.id" name="roomName" id="roomName"
-                  class="form-control" required>
-            <option value="" selected></option>
-            <option *ngFor="let room of showRoom" [value]="room.id">
-              {{room.name}}
-            </option>
-          </select>
-          <!--          <input type="text" class="form-control" name="roomName" id="roomName"-->
-          <!--                 [(ngModel)]="movieShow.roomOfMovieShow.name" required>-->
+                    <input type="text" class="form-control" name="roomName" id="roomName"
+                           [(ngModel)]="movieShow.roomOfMovieShow.name" disabled>
         </div>
       </div>
       <div class="form-group row col-12 p-1 justify-content-around">
@@ -25,7 +18,23 @@
           <label for="capacity" class="pt-2 pb-2">Xωρητικότητα</label></div>
         <div class="col-sm-8">
           <input type="number" class="form-control" name="capacity" id="capacity"
-                 [(ngModel)]="movieShow.roomOfMovieShow.capacity" required>
+                 [(ngModel)]="movieShow.roomOfMovieShow.capacity" #capacity="ngModel" required>
+          <div class="alert-danger" *ngIf="f.submitted && capacity.invalid">
+            <div *ngIf="capacity.errors.required">Συμπληρώστε τη χωρητικότητα</div>
+          </div>
+        </div>
+      </div>
+      <!--ημερομηνία και ώρα-->
+      <div class="form-group row col-12 p-1 justify-content-around">
+        <div class="col-sm-4 text-sm-right custom-blue">
+          <label for="dateTime" class="pt-2 pb-2">Προβολή</label></div>
+        <div class="col-sm-4">
+          <input type="datetime-local" class="form-control" name="dateTime" id="dateTime"
+                 [ngModel]="movieShow.showDate | date:'dd/MM/yyyy'" required>
+        </div>
+        <div class="col-sm-4">
+          <input type="datetime-local" class="form-control" name="time" id="time"
+                 [ngModel]="movieShow.startTime| date:'hh:mm'" required>
         </div>
       </div>
       <!-- ταινια-->
@@ -35,7 +44,10 @@
           <label for="movieTitle" class="pt-2 pb-2">Τίτλος</label></div>
         <div class="col-sm-8">
           <input type="text" class="form-control" name="movieTitle" id="movieTitle"
-                 [(ngModel)]="movie.title" required>
+                 [(ngModel)]="movie.title" required #movieTitle="ngModel">
+          <div class="alert-danger" *ngIf="f.submitted && movieTitle.invalid">
+            <div *ngIf="movieTitle.errors.required">Συμπληρώστε τον τίλτο της ταινίας</div>
+          </div>
         </div>
       </div>
       <div class="form-group row col-12 p-1 justify-content-around">
@@ -43,7 +55,10 @@
           <label for="movieYear" class="pt-2 pb-2">Έτος</label></div>
         <div class="col-sm-8">
           <input type="text" class="form-control" name="movieYear" id="movieYear"
-                 [(ngModel)]="movie.movieYear" required>
+                 [(ngModel)]="movie.movieYear" required #movieYear="ngModel">
+          <div class="alert-danger" *ngIf="f.submitted && movieYear.invalid">
+            <div *ngIf="movieYear.errors.required">Συμπληρώστε το έτος της ταινίας</div>
+          </div>
         </div>
       </div>
       <div class="form-group row col-12 p-1 justify-content-around">
@@ -51,7 +66,10 @@
           <label for="rating" class="pt-2 pb-2">Βαθμολογία</label></div>
         <div class="col-sm-8">
           <input type="text" class="form-control" name="rating" id="rating"
-                 [(ngModel)]="movie.rating" required>
+                 [(ngModel)]="movie.rating" required #rating="ngModel">
+          <div class="alert-danger" *ngIf="f.submitted && rating.invalid">
+            <div *ngIf="rating.errors.required">Συμπληρώστε τη βαθμολογία της ταινίας</div>
+          </div>
         </div>
       </div>
       <div class="form-group row col-12 p-1 justify-content-around">
@@ -59,7 +77,10 @@
           <label for="description" class="pt-2 pb-2">Περιγραφή</label></div>
         <div class="col-sm-8">
           <textarea type="text" class="form-control" name="description" id="description"
-                    [(ngModel)]="movie.description" rows="4" required></textarea>
+                    [(ngModel)]="movie.description" rows="4" required #description="ngModel"></textarea>
+          <div class="alert-danger" *ngIf="f.submitted && description.invalid">
+            <div *ngIf="description.errors.required">Συμπληρώστε την περιγραφή της ταινίας</div>
+          </div>
         </div>
       </div>
       <!-- εικόνα -->
@@ -69,7 +90,6 @@
         <div class="col-sm-8">
           <img class="img-responsive photo m-auto poster"  [src]="'data:image/jpeg;base64,'+movie.poster">
           <input type="file" id="image" (change)="onFileChanged($event)" required>
-
         </div>
       </div>
       <div class="form-group text-center m-3">
