--- a/src/app/check-in/check-in.component.html
+++ b/src/app/check-in/check-in.component.html
@@ -1,20 +1,29 @@
 <div class="container-fluid mx-auto pt-5 pb-5">
   <div class="card card-container w-50 m-auto">
     <div class="card-header text-sm-center custom-blue font-weight-bold">Εισάγετε τον αριθμό εισιτηρίου</div>
-    <form name="form" (ngSubmit)="ticketCheck()" #f="ngForm" novalidate>
+    <form name="form" (ngSubmit)="checkIn()" #f="ngForm" novalidate>
       <!-- number of ticket-->
       <div class="form-group row col-12 p-3 justify-content-around w-75 m-auto">
         <div class="col-sm-5 text-sm-center custom-blue">
           <label for="ticketNumber">Αιρθμός εισιτηρίου </label></div>
         <div class="col-sm-7">
           <input type="text" class="form-control" name="ticketNumber" [(ngModel)]="form.ticketNumber"
-                 #ticketNumber="ngModel" id="ticketNumber"/>
+                 #ticketNumber="ngModel" id="ticketNumber" required=""/>
+          <div class="alert-danger" *ngIf="f.submitted && ticketNumber.invalid">
+            <div *ngIf="ticketNumber.errors.required">Εισάγετε τον αριθμό εισιτηρίου σας.</div>
+          </div>
         </div>
       </div>
       <div class="form-group text-center m-3">
         <button class="btn btn-primary btn-sm m-auto text-capitalize">Καταχώριση</button>
       </div>
     </form>
+    <div class="alert-success">
+      <div *ngIf="successMessage">{{successMessage}}</div>
+    </div>
+    <div class="alert-danger">
+      <div *ngIf="errorMessage">{{errorMessage}}</div>
+    </div>
 
 
   </div>
